Update ZipscriptZipHandler.java